# ecs-task-secrets

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: main.rs
