[package]
name = "ecs-task-secret"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.12.0"
aws-sdk-ecs = "0.12.0"
aws-sdk-s3 = "0.12.0"
aws-types = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.18.2", features = ["full"] }
clap = { version = "3.2.6", features = ["derive"] }
